--- a/_layouts/categories.html
+++ b/_layouts/categories.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 title: "Categories"
 layout: default
 permalink: "/categories.html"
@@ -19,4 +19,4 @@ permalink: "/categories.html"
 {% assign pages_list = nil %}
 {% assign group = nil %}
 </div>
-{% endfor %}
+{% endfor %} -->
