--- a/_layouts/tags.html
+++ b/_layouts/tags.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 title: "Tags"
 layout: default
 permalink: "/tags.html"
@@ -18,4 +18,4 @@ permalink: "/tags.html"
 {% assign pages_list = nil %}
 {% assign group = nil %}
 </div>
-{% endfor %}
+{% endfor %} -->
