--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,76 +55,25 @@
         </div>
     </nav>
 
-    
     <div class="container">
         <div class="row no-gutters">
-          <div class="col-xl-6 col-12 mb-5 mb-xl-0">
-            <div class="media media-news">
-              <div class="media-img">
-                <img src="https://www.bootdey.com/image/350x280/FFB6C1/000000" alt="Generic placeholder image">
-              </div>
-              <div class="media-body">
-                <span class="media-date">25 july 2017</span>
-                <h5 class="mt-0 sep">Finibus Bonorum Malor.</h5>
-                <p>Lorem ipsum dolor amet consectetur adip sicing elit sed eiusm tempor incididunt ut labore dolore.</p>
-                <a href="blog-post-right-sidebar.html" class="btn btn-transparent">View More</a>
-              </div>
-            </div>
-          </div>
-          
-          <div class="col-xl-6 col-12">
-            <div class="media media-news">
-              <div class="media-img">
-                <img src="https://www.bootdey.com/image/350x280/87CEFA/000000" alt="Generic placeholder image">
-              </div>
-              <div class="media-body">
-                <span class="media-date">13 August 2018</span>
-                 <h5 class="mt-0 sep"> Tincidunt dui ornare</h5>
-                <p>Facilisi morbi tempus iaculis urna id volutpat lacus. Mi eget mauris pharetra et. Fermentum iaculis</p>
-                <a href="blog-post-right-sidebar.html" class="btn btn-transparent">View More</a>
-              </div>
-            </div>
-          </div>
-        </div>
-        
-        <div class="row no-gutters mt-4">
-          <div class="col-xl-6 col-12 mb-5 mb-xl-0">
-            <div class="media media-news">
-              <div class="media-img">
-                <img src="https://www.bootdey.com/image/350x280/FF7F50/000000" alt="Generic placeholder image">
-              </div>
-              <div class="media-body">
-                <span class="media-date">25 july 2017</span>
-                <h5 class="mt-0 sep">Finibus Bonorum Malor.</h5>
-                <p>Lorem ipsum dolor amet consectetur adip sicing elit sed eiusm tempor incididunt ut labore dolore.</p>
-                <a href="blog-post-right-sidebar.html" class="btn btn-transparent">View More</a>
-              </div>
-            </div>
-          </div>
-          
-          <div class="col-xl-6 col-12">
-            <div class="media media-news">
-              <div class="media-img">
-                <img src="https://www.bootdey.com/image/350x280/20B2AA/000000" alt="Generic placeholder image">
-              </div>
-              <div class="media-body">
-                <span class="media-date">13 August 2018</span>
-                 <h5 class="mt-0 sep"> Tincidunt dui ornare</h5>
-                <p>Facilisi morbi tempus iaculis urna id volutpat lacus. Mi eget mauris pharetra et. Fermentum iaculis</p>
-                <a href="blog-post-right-sidebar.html" class="btn btn-transparent">View More</a>
-              </div>
-            </div>
-          </div>
+            {% for post in site.posts %}
+                <div class="col-xl-6 col-12 mb-5 mb-xl-0">
+                    <div class="media media-news">
+                        <div class="media-img">
+                        <img src="{{ site.baseurl }}/{{ post.image }}" alt="Apples on island table">
+                        </div>
+                        <div class="media-body">
+                        <span class="media-date">{{ post.date | date: "%B %d, %Y" }}</span>
+                        <h5 class="mt-0 sep">{{ post.title }}</h5>
+                        <p>{{ post.excerpt }} </p>
+                        <a href="{{ post.url }}">View More</a> - {{ post.date | date: "%B %d, %Y" }}
+                        </div>
+                    </div>
+                    </div>
+            {% endfor %}
         </div>
     </div>
-
-    <ul>
-        {% for post in site.posts %}
-            <li>
-                <a href="{{ post.url }}">{{ post.title }}</a> - {{ post.date | date: "%B %d, %Y" }}
-            </li>
-        {% endfor %}
-    </ul>
 
     <script src = "{{ site.baseurl }}/assets/js/main.js "></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
