--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,23 +55,49 @@
         </div>
     </nav>
 
+    <div class = "container">
+
+    </div>
+
+    {% assign split_point = site.posts | size | divided_by: 2 %}
+
     <div class="container">
-        <div class="row no-gutters">
-            {% for post in site.posts %}
-                <div class="col-xl-6 col-12 mb-5 mb-xl-0">
-                    <div class="media media-news">
-                        <div class="media-img">
-                        <img src="{{ site.baseurl }}/{{ post.image }}" alt="Apples on island table">
-                        </div>
-                        <div class="media-body">
-                        <span class="media-date">{{ post.date | date: "%B %d, %Y" }}</span>
-                        <h5 class="mt-0 sep">{{ post.title }}</h5>
-                        <p>{{ post.excerpt }} </p>
-                        <a href="{{ post.url }}">View More</a> - {{ post.date | date: "%B %d, %Y" }}
+        <div class = "posts-home">
+            <div class="posts-home-left">
+                {% for post in site.posts limit: split_point %}
+                    <div class="col-xl-6 col-12 mb-5 mb-xl-0">
+                        <div class="media media-news">
+                            <div class="media-img">
+                                <img src="{{ site.baseurl }}/{{ post.image }}" alt="Apples on island table">
+                            </div>
+                            <div class="media-body">
+                                <span class="media-date">{{ post.date | date: "%B %d, %Y" }}</span>
+                                <h5 class="mt-0 sep">{{ post.title }}</h5>
+                                <p>{{ post.excerpt }} </p>
+                                <a href="{{ post.url }}">View More</a> - {{ post.date | date: "%B %d, %Y" }}
+                            </div>
                         </div>
                     </div>
+                {% endfor %}
+            </div>
+            <div class="posts-home-right">
+                {% assign half = site.posts.size | divided_by: 2 %}
+                {% for post in site.posts offset: split_point %}
+                    <div class="col-xl-6 col-12 mb-5 mb-xl-0">
+                        <div class="media media-news">
+                            <div class="media-img">
+                                <img src="{{ site.baseurl }}/{{ post.image }}" alt="Apples on island table">
+                            </div>
+                            <div class="media-body">
+                                <span class="media-date">{{ post.date | date: "%B %d, %Y" }}</span>
+                                <h5 class="mt-0 sep">{{ post.title }}</h5>
+                                <p>{{ post.excerpt }} </p>
+                                <a href="{{ post.url }}">View More</a> - {{ post.date | date: "%B %d, %Y" }}
+                            </div>
+                        </div>
                     </div>
-            {% endfor %}
+                {% endfor %}
+            </div>
         </div>
     </div>
 
