--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,16 +5,16 @@
     flex-direction: row;
     align-items: center;
     justify-content: center; /* Center content horizontally */
-    width: 100%; /* Full width of the page */
-    height: 300px;
+    width: 90%; /* Full width of the page */
+    height: 200px;
     background-color: #fff; /* Optional background color */
     gap: 170px; /* Space between image and text */
-    
+    margin: 0 auto;
 }
 
 .topper h1 {
     font-family: 'Cinzel';
-    font-size: 100px; /* Responsive font size */
+    font-size: 80px; /* Responsive font size */
     font-weight: 400;
     line-height: 1.2;
     letter-spacing: 0;
@@ -24,7 +24,7 @@
 }
 
 .logo {
-    width: 180px; /* Control size of logo */
+    width: 150px; /* Control size of logo */
     height: auto; /* Maintain aspect ratio */
 }
 
@@ -32,37 +32,56 @@
     width:80px;
 }
 
-.vector_1{
-    /* Vector 1 */
-    position: absolute;
-    width: 2057px;
-    height: 1880px;
-    left: -473px;
-    top: 428px;
-    z-index: -1; /* Lower z-index = behind */
+.grid-container { 
+    display: flex; 
+    flex-direction: row;
+    justify-content: center;
+    gap: 100px; 
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 5vh;
 }
 
-.first{
-    /* My name is beatriz solorzano and this is my blog about blaha blaha blah. Ive lived all over and currently reside in Switzerland. This is a blog about cusine from around the world and a site to buy some off my curations and creations */
-    /* My name is beatriz solorzano and this is my blog about blaha blaha blah. Ive lived all over and currently reside in Switzerland. This is a blog about cusine from around the world and a site to buy some off my curations and creations */
-    position: absolute;
-    width: 799px;
-    height: 132px;
-    left: 700px;
-    right: 94px;
-    top: 310px;
-    bottom: 2909px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    color: rgb(0, 0, 0);
-    font-family: Lato;
-    font-size: 30px;
-    font-weight: 400;
-    line-height: 36px;
-    letter-spacing: 0%;
-    text-align: left;
+.temp{
+    height: 30vw;
 }
+
+
+
+/* Mobile view adjustments */
+@media (max-width: 400px) {
+    .topper {
+        align-items: center;
+        gap: 0;
+        height: auto;
+        gap: 20vw;
+        padding: 20px;
+    }
+
+    .logo {
+        width: 120px;
+    }
+
+    /* Hide everything else */
+    .topper h1{
+        display: none;
+    }
+
+    .grid-container{
+        flex-direction: column;
+        align-items: center;
+        margin: auto 0;
+    }
+
+    .temp{
+        width: 70vw;
+        height: 40vh;
+    }
+
+}
+
+
+
 
 
 
