--- a/style.css
+++ b/style.css
@@ -34,6 +34,13 @@ CSS STRUCTURE:
   padding-bottom:3vh;
 }
 
+@media (max-width: 400px) {
+  .py-4{
+    padding-left: 2vw;     /* Maintain aspect ratio */
+    padding-right: 2vw;
+  }
+}
+
 
 
 /*------------- */
